gccida/c3/common_type
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/common_type/src/c-typeck.c:662:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v4; // r15 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/common_type/src/c-typeck.c:669:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *section_name; // rdx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/common_type/src/c-typeck.c:670:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v12; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/common_type/src/c-typeck.c:671:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v13; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/common_type/src/c-typeck.c:672:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v15; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/common_type/src/c-typeck.c:673:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v16; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/common_type/src/c-typeck.c:674:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v17; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/common_type/src/c-typeck.c:678:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v21; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/common_type/src/c-typeck.c:681:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v24; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/common_type/src/c-typeck.c:682:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v25; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/common_type/src/c-typeck.c:684:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *values; // r12 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/common_type/src/c-typeck.c:686:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v29; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/common_type/src/c-typeck.c:687:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v30; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/common_type/src/c-typeck.c:688:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v31; // r15 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/common_type/src/c-typeck.c:691:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *chain; // rbp 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/common_type/src/c-typeck.c:697:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *value_type; // [rsp+8h] [rbp-40h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/common_type/src/c-typeck.c:698:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v41; // [rsp+10h] [rbp-38h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/common_type/src/c-typeck.c:749:20: error: expected expression
v12 = ( tree_node *)*( &global_trees + 26); 
                   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/common_type/src/c-typeck.c:749:9: error: use of undeclared identifier 'tree_node'
v12 = ( tree_node *)*( &global_trees + 26); 
        ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/common_type/src/obj/c-typeck.o] Error 1
